--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "lint": "jshint bin lib test"
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.2",
     "jshint": "^2.8.0",
+    "jshint-stylish": "^2.0.1",
     "qunit-extras": "^1.4.2",
     "qunitjs": "^1.18.0",
     "rollup": "^0.14.1",
